--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ data/**
 logs/**
 
 # except their sub-folders
-!data/**/
-!logs/**/
+#!data/**/
+#!logs/**/
 
 # also keep all .gitkeep files
 !.gitkeep
